--- a/src/styles/abstracts/media.scss
+++ b/src/styles/abstracts/media.scss
@@ -1,12 +1,3 @@
-@media screen and (min-width: 1000px) {
-	#root .home-route {
-		.cards-section {
-			padding-left: 5vw;
-			padding-right: 5vw;
-		}
-	}
-}
-
 @media screen and (max-width: 1060px) {
 	#root .details-route {
 		.detailed-country {
